[project]
name = "modeling-volatility"
version = "0.1.0"
description = ""
authors = [
    {name = "kosunghun317@matroos.xyz"}
]
license = {text = "Unlicensed"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "ruff (>=0.12.11,<0.13.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
